Fixed hiding postListView and not showing it back after an error. Tweaks on styling of site-activity.

--- a/static/nonrel-blog.css
+++ b/static/nonrel-blog.css
@@ -51,9 +51,10 @@
 }
 
 #site-activity {
-    float: right;
-    margin: 0 1em 1em 1em;
     max-width: 175px;
+    position: absolute;
+    top: 70px;
+    right: 2%;
 }
 
 .activity {
@@ -66,6 +67,11 @@
 }
 
 #loading-icon {
+    margin: 0 auto 0 auto;
+    width: 50%;
+}
+
+#loading-icon img {
     display: block;
     margin: 10em auto 0 auto;
 }
